# telescope-browser

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/browser-core/: Cargo.toml
crates/browser-core/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/control/: Cargo.toml
crates/control/src/: lib.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
docs/: CODEX_PANES.md  SECURITY.md
examples/: agent_flow.rs
