[workspace]
resolver = "2"
members = [
    "crates/browser-core",
    "crates/control",
    "crates/runtime",
    "crates/sdk",
    "crates/cli",
    "crates/desktop",
]

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
directories = "6.0.0"
keyring = "4.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tiny_http = "0.12.0"
tao = { version = "0.35.3", default-features = false }
ureq = { version = "3.3.0", features = ["json"] }
url = "2.5"
uuid = { version = "1.18", features = ["v4", "serde"] }
wry = "0.55.1"
zeroize = "1.8"
