[package]
name = "telescope-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["os-keyring"]
os-keyring = ["dep:keyring"]

[dependencies]
keyring = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

