[package]
name = "telescope-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "telescope"
path = "src/main.rs"

[dependencies]
clap.workspace = true
directories.workspace = true
serde_json.workspace = true
telescope-control = { path = "../control" }
telescope-core = { path = "../browser-core" }
telescope-sdk = { path = "../sdk" }
uuid.workspace = true
