[package]
name = "telescope-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
telescope-control = { path = "../control" }
telescope-core = { path = "../browser-core", default-features = false }
thiserror.workspace = true
zeroize.workspace = true

